[package]
name = "miasht"
version = "0.0.3"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Minimum asynchronous HTTP server/client library"
documentation = "https://docs.rs/miasht"
homepage = "https://github.com/sile/miasht"
repository = "https://github.com/sile/miasht"
readme = "README.md"
keywords = ["http", "asynchronous"]
license = "MIT"

[dependencies]
fibers = "0.1"
futures = "0.1"
httparse = "1"
handy_async = "0.2"
trackable = "0.1"

[dev-dependencies]
clap = "2"
sha1 = "0.2"
base64 = "0.5"
