[package]
name = "miasht"
version = "0.0.5"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Minimum asynchronous HTTP server/client library"
homepage = "https://github.com/sile/miasht"
repository = "https://github.com/sile/miasht"
readme = "README.md"
keywords = ["http", "asynchronous"]
license = "MIT"

[dependencies]
futures = "0.1"
httparse = "1"
trackable = "0.2"

[dev-dependencies]
clap = "2"
sha1 = "0.6"
base64 = "0.9"
